--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -19,3 +19,8 @@ htmlcov/
 dist/
 build/
 *.egg-info/
+.idea/
+
+validation_model/training_model/logi
+validation_model/training_model/wyniki
+validation_model/training_model/model_zus
