--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -24,3 +24,4 @@ build/
 validation_model/training_model/logi
 validation_model/training_model/wyniki
 validation_model/training_model/model_zus
+validation_model/training_model/visualizations
